# ocaml-flint

./: .gitmodules  CHANGES  Makefile  README.md  antic.opam  arb.opam  calcium.opam  dune  dune-project  flint.opam  flint2.opam  opam.template  patch_for_nix.sh
.github/workflows/: main.yml
antic/: dune
antic/antic/: dune
antic/lib/: dune
arb/: arb.ml  arb.mli  dune  function_description.ml  ocaml_acb_utils.c  type_description.ml
arb/lib/: dune
calcium/: calcium.ml  calcium.mli  dune  function_description.ml  ocaml_calcium_utils.c  type_description.ml
calcium/lib/: dune
calcium/tests/: dune  dynamic.ml  units.expected  units.ml
configure/: discover.ml  dune  find_antic.ml  find_arb.ml  find_calcium.ml  find_common.ml  find_flint.ml  util.ml
deprecated/: arb.ml  calcium.ml  dune
flint/: dune  flint.ml  flint.mli  function_description.ml  ocaml_flint_utils.c  type_description.ml
flint/flint/: dune
flint/lib/: dune
flint/tests/: dune  dynamic.ml  units.expected  units.ml
flint2/: dune  flint2.ml  type_description.ml
flint2/flint/: dune
flint2/lib/: dune
flint2/tests/: dune  dynamic.ml  units.expected  units.ml
src/: dune  flint.ml  flint.mli  function_description.ml  ocaml_flint_utils.c  type_description.ml
tests/: units.expected  units.ml
utils/: get_include_root.ml
