(library
 (name arb)
 (public_name arb)
 (c_library_flags -lflint (:include ../configure/arb_cflag.sexp))
 (foreign_stubs
  (language c)
  (names ocaml_acb_utils)
  (flags
   (:include ../configure/c_flags.sexp)
   :standard))
 (libraries zarith flint threads)
 (flags -w -9-27)
 (ctypes
  (external_library_name arb)
  (build_flags_resolver
   (vendored
    (c_flags
     "-Werror=implicit-function-declaration"
     (:include ../configure/c_flags.sexp)
     :standard)
    (c_library_flags
     (:include ../configure/libs.sexp)
     "-lgmp -lmpfr")))
  (headers
   (include "acb.h" "string.h"))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Function)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
