(library
 (name calcium)
 (public_name calcium)
 ; (foreign_archives ((path lib/calcium)(mode whole)))
 (foreign_archives lib/calcium)
 (foreign_stubs
  (language c)
  (names ocaml_calcium_utils)
  (include_dirs
   lib
   (lib flint)
   (lib arb)
   (lib antic)))
 (libraries zarith flint arb antic threads)
 (flags -w -9-27)
 (ctypes
  (external_library_name calcium)
  (build_flags_resolver
   (vendored
    (c_flags
     "-I%{read-lines:pwd}"
     "-I%{read:lib/flint_dir}"
     "-I%{read:lib/antic_dir}"
     "-I%{read:lib/arb_dir}"
     "-Werror=implicit-function-declaration"
     :standard)
    (c_library_flags "-lgmp -lmpfr")))
  (deps lib/ca.h)
  (headers
   (include "lib/ca.h" "string.h"))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Function)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))

(rule
 (action
  (with-stdout-to
   pwd
   (run pwd))))
