(library
 (name calcium)
 (public_name calcium)
 (c_library_flags -lflint (:include ../configure/arb_cflag.sexp) -lantic -lcalcium)
 (foreign_stubs
  (language c)
  (names ocaml_calcium_utils)
  (flags
   (:include ../configure/c_flags.sexp)
   :standard)
  )
 (libraries zarith flint arb antic threads)
 (flags -w -9-27)
 (ctypes
  (external_library_name calcium)
  (build_flags_resolver
   (vendored
    (c_flags
     "-Iflint"
     "-Iantic"
     "-Icalcium"
     "-Werror=implicit-function-declaration"
     (:include ../configure/c_flags.sexp)
     :standard)
    (c_library_flags
     (:include ../configure/libs.sexp)
     "-lgmp -lmpfr -lflint"
     (:include ../configure/arb_cflag.sexp)
     "-lantic -lcalcium")))
  (headers
   (include "calcium/ca.h" "string.h"))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Function)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
