(library
 (name calcium)
 (public_name calcium)
 (c_library_flags
  (:include ../configure/common_libs.sexp)
  (:include ../configure/flint_libs.sexp)
  (:include ../configure/arb_libs.sexp)
  (:include ../configure/antic_libs.sexp)
  (:include ../configure/calcium_libs.sexp))
 (foreign_stubs
  (language c)
  (names ocaml_calcium_utils)
  (flags
   (:include ../configure/common_cflags.sexp)
   (:include ../configure/flint_cflags.sexp)
   (:include ../configure/arb_cflags.sexp)
   (:include ../configure/antic_cflags.sexp)
   (:include ../configure/calcium_cflags.sexp)
   :standard))
 (libraries zarith flint arb antic threads)
 (flags -w -9-27)
 (ctypes
  (external_library_name calcium)
  (build_flags_resolver
   (vendored
    (c_flags
     "-Werror=implicit-function-declaration"
     (:include ../configure/common_cflags.sexp)
     (:include ../configure/flint_cflags.sexp)
     (:include ../configure/arb_cflags.sexp)
     (:include ../configure/antic_cflags.sexp)
     (:include ../configure/calcium_cflags.sexp)
     :standard)
    (c_library_flags
     (:include ../configure/common_libs.sexp)
     (:include ../configure/flint_libs.sexp)
     (:include ../configure/arb_libs.sexp)
     (:include ../configure/antic_libs.sexp)
     (:include ../configure/calcium_libs.sexp))))
  (headers
   (include "ca.h" "string.h"))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Function)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
