(library
 (name flint)
 (public_name flint)
 ; (foreign_archives ((path flint/flint)(mode whole)))
 (foreign_archives flint/flint)
 (foreign_stubs
  (language c)
  (names ocaml_flint_utils)
  (include_dirs
   flint
   (lib zarith))
  (flags "-D_GNU_SOURCE")
 )
 (libraries zarith ctypes threads)
 (flags -w -9-27)
 (ctypes
  (external_library_name flint)
  (build_flags_resolver
   (vendored
    (c_flags
     "-I%{read-lines:pwd}/flint"
     "-I%{read-lines:pwd}/."
     "-Werror=implicit-function-declaration"
     "-D_GNU_SOURCE"
     :standard)
    (c_library_flags "-lgmp -lmpfr")))
  (deps flint/flint.h flint/fmpz.h)
  (headers
   (include "flint/fmpz.h" "flint/fmpq.h" "string.h"))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Function)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))

(rule
 (action
  (with-stdout-to
   pwd
   (run pwd))))
