(library
 (name flint)
 (public_name flint)
 (c_library_flags
  (:include ../configure/common_libs.sexp)
  (:include ../configure/flint_libs.sexp))
 (foreign_stubs
  (language c)
  (names ocaml_flint_utils)
  (flags
   (:include ../configure/common_cflags.sexp)
   (:include ../configure/flint_cflags.sexp)
   "-Werror=implicit-function-declaration"
   :standard)
  (include_dirs
   (lib zarith)))
 (libraries zarith ctypes threads)
 (flags -w -9-27)
 (ctypes
  (external_library_name flint)
  (build_flags_resolver
   (vendored
    (c_flags
     "-Werror=implicit-function-declaration"
     (:include ../configure/common_cflags.sexp)
     (:include ../configure/flint_cflags.sexp)
     :standard)
    (c_library_flags
     (:include ../configure/common_libs.sexp)
     (:include ../configure/flint_libs.sexp))))
  (headers
   (include "fmpz.h" "fmpq.h" "fmpz_poly.h" "string.h"))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Function)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
