(data_only_dirs antic)

;make sure the library .a (i.e. %{ext_lib}) is compiled with pic, and is used for .cmxs

(rule
 (action
  (with-stdout-to
   flint_dir
   (run
    %{ocaml}
    %{dep:../../utils/get_include_root.ml}
    2
    %{lib:flint:flint/flint.h}))))

(rule
 (targets dllantic%{ext_dll} libantic%{ext_lib} nf_elem.h qfb.h nf.h)
 (deps
  (source_tree antic)
  (sandbox always)
  (package flint))
 (action
  (no-infer
   (progn
    (chdir
     antic
     (progn
      (run
       ./configure
       --with-flint=%{read:flint_dir}
       --prefix=../prefix
       --with-pkg-config
       CFLAGS=-fPIC)
      (run make library -j)
      (run make install)))
    (copy prefix/lib/libantic%{ext_dll} dllantic%{ext_dll})
    (copy prefix/lib/libantic%{ext_lib} libantic%{ext_lib})
    (copy prefix/include/antic/nf_elem.h nf_elem.h)
    (copy prefix/include/antic/qfb.h qfb.h)
    (copy prefix/include/antic/nf.h nf.h)))))

(install
 (section lib)
 (package antic)
 (files
  (nf_elem.h as antic/nf_elem.h)
  (qfb.h as antic/qfb.h)
  (nf.h as antic/nf.h)))
