(data_only_dirs arb)

;make sure the library .a is compiled with pic, and is used for .cmxs

(rule
 (action
  (with-stdout-to
   flint_dir
   (run
    %{ocaml}
    %{dep:../../utils/get_include_root.ml}
    %{lib:flint:include/flint/flint.h}))))

(rule
 (targets
  dllarb.so
  libarb.a
  dirichlet.h
  mag.h
  acb_poly.h
  arb.h
  arb_calc.h
  arb_poly.h
  double_interval.h
  acb_hypgeom.h
  acb_calc.h
  arb_fmpz_poly.h
  acb_dft.h
  bernoulli.h
  acb_mat.h
  bool_mat.h
  acb_elliptic.h
  arb_fpwrap.h
  partitions.h
  acb_modular.h
  acb_dirichlet.h
  dlog.h
  arb_hypgeom.h
  arf.h
  hypgeom.h
  acb.h
  fmpz_extras.h
  arb_mat.h
  fmpr.h)
 (deps
  (source_tree arb)
  (sandbox always)
  (package flint))
 (action
  (no-infer
   (progn
    (chdir
     arb
     (progn
      (run
       ./configure
       --with-flint=%{read:flint_dir}
       --prefix=../prefix
       CFLAGS=-fPIC)
      (run make library -j)
      (run make install)))
    (copy prefix/lib/libarb.so dllarb.so)
    (copy prefix/lib/libarb.a libarb.a)
    (copy prefix/include/dirichlet.h dirichlet.h)
    (copy prefix/include/mag.h mag.h)
    (copy prefix/include/acb_poly.h acb_poly.h)
    (copy prefix/include/arb.h arb.h)
    (copy prefix/include/arb_calc.h arb_calc.h)
    (copy prefix/include/arb_poly.h arb_poly.h)
    (copy prefix/include/double_interval.h double_interval.h)
    (copy prefix/include/acb_hypgeom.h acb_hypgeom.h)
    (copy prefix/include/acb_calc.h acb_calc.h)
    (copy prefix/include/arb_fmpz_poly.h arb_fmpz_poly.h)
    (copy prefix/include/acb_dft.h acb_dft.h)
    (copy prefix/include/bernoulli.h bernoulli.h)
    (copy prefix/include/acb_mat.h acb_mat.h)
    (copy prefix/include/bool_mat.h bool_mat.h)
    (copy prefix/include/acb_elliptic.h acb_elliptic.h)
    (copy prefix/include/arb_fpwrap.h arb_fpwrap.h)
    (copy prefix/include/partitions.h partitions.h)
    (copy prefix/include/acb_modular.h acb_modular.h)
    (copy prefix/include/acb_dirichlet.h acb_dirichlet.h)
    (copy prefix/include/dlog.h dlog.h)
    (copy prefix/include/arb_hypgeom.h arb_hypgeom.h)
    (copy prefix/include/arf.h arf.h)
    (copy prefix/include/hypgeom.h hypgeom.h)
    (copy prefix/include/acb.h acb.h)
    (copy prefix/include/fmpz_extras.h fmpz_extras.h)
    (copy prefix/include/arb_mat.h arb_mat.h)
    (copy prefix/include/fmpr.h fmpr.h)))))

(install
 (section lib)
 (package arb)
 (files
  (dirichlet.h as include/arb/dirichlet.h)
  (mag.h as include/arb/mag.h)
  (acb_poly.h as include/arb/acb_poly.h)
  (arb.h as include/arb/arb.h)
  (arb_calc.h as include/arb/arb_calc.h)
  (arb_poly.h as include/arb/arb_poly.h)
  (double_interval.h as include/arb/double_interval.h)
  (acb_hypgeom.h as include/arb/acb_hypgeom.h)
  (acb_calc.h as include/arb/acb_calc.h)
  (arb_fmpz_poly.h as include/arb/arb_fmpz_poly.h)
  (acb_dft.h as include/arb/acb_dft.h)
  (bernoulli.h as include/arb/bernoulli.h)
  (acb_mat.h as include/arb/acb_mat.h)
  (bool_mat.h as include/arb/bool_mat.h)
  (acb_elliptic.h as include/arb/acb_elliptic.h)
  (arb_fpwrap.h as include/arb/arb_fpwrap.h)
  (partitions.h as include/arb/partitions.h)
  (acb_modular.h as include/arb/acb_modular.h)
  (acb_dirichlet.h as include/arb/acb_dirichlet.h)
  (dlog.h as include/arb/dlog.h)
  (arb_hypgeom.h as include/arb/arb_hypgeom.h)
  (arf.h as include/arb/arf.h)
  (hypgeom.h as include/arb/hypgeom.h)
  (acb.h as include/arb/acb.h)
  (fmpz_extras.h as include/arb/fmpz_extras.h)
  (arb_mat.h as include/arb/arb_mat.h)
  (fmpr.h as include/arb/fmpr.h)))
