(data_only_dirs calcium)

;make sure the library .a is compiled with pic, and is used for .cmxs

(rule
 (action
  (with-stdout-to
   flint_dir
   (run
    %{ocaml}
    %{dep:../../utils/get_include_root.ml}
    2
    %{lib:flint:flint/flint.h}))))

(rule
 (action
  (with-stdout-to
   arb_dir
   (run %{ocaml} %{dep:../../utils/get_include_root.ml} 1 %{lib:arb:arb.h}))))

(rule
 (action
  (with-stdout-to
   antic_dir
   (run
    %{ocaml}
    %{dep:../../utils/get_include_root.ml}
    2
    %{lib:antic:antic/nf.h}))))

(rule
 (targets
  dllcalcium.so
  libcalcium.a
  qqbar.h
  ca_field.h
  calcium.h
  utils_flint.h
  ca_mat.h
  ca_vec.h
  fmpz_mpoly_q.h
  fexpr.h
  ca.h
  ca_ext.h
  ca_poly.h
  fexpr_builtin.h)
 (deps
  (source_tree calcium)
  (sandbox always)
  (package flint)
  (package arb)
  (package antic))
 (action
  (no-infer
   (progn
    (chdir
     calcium
     (progn
      (run
       ./configure
       --with-flint=%{read:flint_dir}
       --with-arb=%{read:arb_dir}
       --with-antic=%{read:antic_dir}
       --prefix=../prefix
       CFLAGS=-fPIC
       ; Simplify linking
        --disable-pthread --disable-tls
      )
      (run make library -j)
      (run make install)))
    (copy prefix/lib/libcalcium.so dllcalcium.so)
    (copy prefix/lib/libcalcium.a libcalcium.a)
    (copy prefix/include/calcium/qqbar.h qqbar.h)
    (copy prefix/include/calcium/ca_field.h ca_field.h)
    (copy prefix/include/calcium/calcium.h calcium.h)
    (copy prefix/include/calcium/utils_flint.h utils_flint.h)
    (copy prefix/include/calcium/ca_mat.h ca_mat.h)
    (copy prefix/include/calcium/ca_vec.h ca_vec.h)
    (copy prefix/include/calcium/fmpz_mpoly_q.h fmpz_mpoly_q.h)
    (copy prefix/include/calcium/fexpr.h fexpr.h)
    (copy prefix/include/calcium/ca.h ca.h)
    (copy prefix/include/calcium/ca_ext.h ca_ext.h)
    (copy prefix/include/calcium/ca_poly.h ca_poly.h)
    (copy prefix/include/calcium/fexpr_builtin.h fexpr_builtin.h)))))

; (install
;  (section lib)
;  (package calcium)
;  (files

; )))
