(tests
 (names units)
 (modules units)
 (libraries calcium)
 (package calcium)
)

;; Need dune whole mode for foreign library

; (tests
;  (names dynamic)
;  (modules dynamic)
;  (libraries dune-site.plugins zarith)
;  (deps (package flint)(package arb)(package antic)(package calcium))
;  (package calcium)
; )
